--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h2>DedSec P2P Voice <small class="muted">без сервера</small></h2>
+    <h2>S!ndy <small class="muted">без сервера</small></h2>
 
     <div class="card">
       <div class="row">
